# jovian-careers-website-v2

./: .replit  LICENSE  README.md  app.py  database.py  pyproject.toml
templates/: application_form.html  application_submitted.html  banner.html  footer.html  home.html  jobitem.html  jobpage.html  nav.html
